--- a/www.institutodeartesdamariss.com.html
+++ b/www.institutodeartesdamariss.com.html
@@ -44,7 +44,7 @@
                          <img src="assets/images/logo-1-122x122.png" alt="Mobirise" title="" style="height: 5.3rem;">
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://mobirise.com">Instituto de artes Damariss</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-5" href="https://www.facebook.com/DamarissArtes/">Instituto de artes Damariss</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
